--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
         <br>manage them in different lists, add note for each and priority, edit their properties,
         <br>mark them as a Completed tascks or delete them if you wish & more.
         </p>
-        <video controls="controls" poster="img/turtle.jpg" style="object-fit: fill;">
-          <source src="movies/automation.mp4" type="video/mp4" />
+        <video controls="controls" poster="img\turtle.jpg" style="object-fit: fill;">
+          <source src="movies\automation.mp4" type="video/mp4" />
           הדפדפן שלך לא תומך ב-HTML 5. אנו מצטערים.
         </video>
         <div id="right">
