--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
           </p>
         </div>
         <br>
-        <video id="videoright" controls="controls" poster="../img/dolphin.jpg" style="object-fit: fill;">
-          <source src="../movies/allure.mp4" type="video/mp4" />
+        <video id="videoright" controls="controls" poster="img\dolphin.jpg" style="object-fit: fill;">
+          <source src="movies\allure.mp4" type="video/mp4" />
           הדפדפן שלך לא תומך ב-HTML 5. אנו מצטערים.
         </video>
         <div id="left">
@@ -136,8 +136,8 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Code Management</h2>
-        <video id="video" controls="controls" poster="../img/whale-shark.jpg" style="object-fit: fill;">
-          <source src="../movies/Jenkins.mp4" type="video/mp4">
+        <video id="video" controls="controls" poster="img\whale-shark.jpg" style="object-fit: fill;">
+          <source src="movies\Jenkins.mp4" type="video/mp4">
           הדפדפן שלך לא תומך ב-HTML 5. אנו מצטערים.
         </video>
         <div id="rightmanage">
@@ -157,7 +157,7 @@
           </p>
         </div>
         <div class="container1">
-          <img class="githublink" src="../img/palm12.png">
+          <img class="githublink" src="img\palm12.png">
           <a href="https://github.com/roimonsa/Automation-Project" target="_blank">
             <div class="center">Project <br>in <br>GitHub</div>
           </a>
@@ -180,27 +180,27 @@
         <!-- Images used to open the lightbox -->
         <div class="row">
           <div class="column container pleft">
-            <img src="../img/img1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow image" alt="Avatar">
+            <img src="img\img1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow image" alt="Avatar">
             <div class="overlay">Split between <br>Methods and Tests</div>
           </div>
           <div class="column container pright">
-            <img src="../img/img2.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow image" alt="Avatar">
+            <img src="img\img2.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow image" alt="Avatar">
             <div class="overlay">Base Page</div>
           </div>
           <div class="column container pleft">
-            <img src="../img/img3.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow image" alt="Avatar">
+            <img src="img\img3.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow image" alt="Avatar">
             <div class="overlay">Page Elements</div>
           </div>
           <div class="column container pright">
-            <img src="../img/img4.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow image" alt="Avatar">
+            <img src="img\img4.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow image" alt="Avatar">
             <div class="overlay">Page Methods</div>
           </div>
           <div class="column container pleft">
-            <img src="../img/img5.jpg" onclick="openModal();currentSlide(5)" class="hover-shadow image" alt="Avatar">
+            <img src="img\img5.jpg" onclick="openModal();currentSlide(5)" class="hover-shadow image" alt="Avatar">
             <div class="overlay">Page Validation</div>
           </div>
           <div class="column container pright">
-            <img src="../img/img6.jpg" onclick="openModal();currentSlide(6)" class="hover-shadow image" alt="Avatar">
+            <img src="img\img6.jpg" onclick="openModal();currentSlide(6)" class="hover-shadow image" alt="Avatar">
             <div class="overlay">Tests Classes</div>
           </div>
         </div>
@@ -212,7 +212,7 @@
 
             <div class="mySlides">
               <div class="numbertext">1 / 6</div>
-              <img src="../img/img1_wide.jpg" style="width:40%;height: 40%;">
+              <img src="img\img1_wide.jpg" style="width:40%;height: 40%;">
               <div class="firstimg">- New Class for every Logical page.
                 <br>- Split between Methods and Tests.
               </div>
@@ -220,7 +220,7 @@
 
             <div class="mySlides">
               <div class="numbertext">2 / 6</div>
-              <img src="../img/img2_wide.jpg" style="width:40%;height: 40%;">
+              <img src="img\img2_wide.jpg" style="width:40%;height: 40%;">
               <div class="secondimg"><u>Base Page</u>
                 <br>- Selenium operations are wrapped <br>by methods in this class.
                 <br>- All Page Objects classes we use <br>will inherit from this class.
@@ -229,7 +229,7 @@
 
             <div class="mySlides">
               <div class="numbertext">3 / 6</div>
-              <img src="../img/img3_wide.jpg" style="width:40%;height: 40%;">
+              <img src="img\img3_wide.jpg" style="width:40%;height: 40%;">
               <div class="thirdimg"><u>Page Elements</u>
                 <br>- The Page Elements are defined <br>once in the project, <br>which gives us a flexible code.
                 <br>- All the Elements are defined <br>on their Logical page class.
@@ -238,7 +238,7 @@
 
             <div class="mySlides">
               <div class="numbertext">4 / 6</div>
-              <img src="../img/img4_wide.jpg" style="width:40%;height: 40%;">
+              <img src="img\img4_wide.jpg" style="width:40%;height: 40%;">
               <div class="fourthimg"><u>Page Methods</u>
                 <br>- In every Page Objects class <br>the actions on the Logical page <br>are realized in Methods.
                 <br>- In this way we can to call to the <br>same Method again and again <br>in the Tests classes.
@@ -247,7 +247,7 @@
 
             <div class="mySlides">
               <div class="numbertext">5 / 6</div>
-              <img src="../img/img5_wide.jpg" style="width:50%;height: 50%;">
+              <img src="img\img5_wide.jpg" style="width:50%;height: 50%;">
               <div class="fifthimg"><u>Page Validation</u>
                 <br>- For each Page Objects class <br>there are Validation methods <br>to check if the tests <br>Passed or failed.
               </div>
@@ -255,7 +255,7 @@
 
             <div class="mySlides">
               <div class="numbertext">6 / 6</div>
-              <img src="../img/img6_wide.jpg" style="width:50%;height: 50%;">
+              <img src="img\img6_wide.jpg" style="width:50%;height: 50%;">
               <div class="sixthimg"><u>Tests Classes</u>
                 <br>- In the Tests classes we just call <br>to the Method from Page Objects classes <br>which give us clear and simple tests.
                 <br>- Each test end with Assert <br>that call to Validtion Method <br>from Page Objects classes.
@@ -324,12 +324,12 @@
         <h2 class="mb-5">Other Projects</h2>
         <div class="projects"> 
           <a href="https://roimonsa.github.io/html/" target="_blank">
-            <img src="../img/logo12.png" class="htmlprojectr hover-shadow1">
+            <img src="img\logo12.png" class="htmlprojectr hover-shadow1">
           </a>
         </div>
         <div class="projects"> 
           <a href="https://roimonsa.github.io/proyektim/" target="_blank">
-            <img src="../img/projects1.png" class="htmlprojectl hover-shadow1">
+            <img src="img\projects1.png" class="htmlprojectl hover-shadow1">
           </a>
         </div>
       </div>
