--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </a>
         </li> 	
         <li class="list-inline-item">
-          <a href="doc_cv\Roi Monsa CV.docx" target="_blank">
+          <a href="doc_cv\Roi Monsa CV.docx">
             <img class="icon-cv" src="icons\resume1.png" alt="CV-icon" title="CV">
           </a>
         </li>
